--- a/index.html
+++ b/index.html
@@ -32,15 +32,14 @@
             <input id="searchCity" type="text" class="form-control" placeholder="City name">
             <button id="searchBtn" class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
           </div>
-          <!-- Current city display -->
-          <div class="card">
+          <!-- Previous city list -->
+          <div class="card city-list">
             <ul class="list-group list-group-flush list"></ul>
           </div>
-        </div>
-        <!-- 5 Day Forecast display -->
+        <!-- 5 Day Forecast display
         <div class="mt-4 col-md-12">
           <h5 id="forecastHeader" class="mt-3 hide">5 Day Forecast:</h5>
-          <div id="forecast" class="row"></div>
+          <div id="forecast" class="row"></div>-->
         </div>
       </div>
     </div>
