--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
           <div class="card city-list">
             <ul class="list-group list-group-flush list"></ul>
           </div>
+        </div>
+        
+        <div class="current-city col-lg-7 mt-4">
+        </div>
+      </div>
         <!-- 5 Day Forecast display
         <div class="mt-4 col-md-12">
           <h5 id="forecastHeader" class="mt-3 hide">5 Day Forecast:</h5>
