--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
           </div>
         </div>
         
-        <div class="current-city col-lg-7 mt-4">
+        <div class="col-lg-7 mt-4" id="current-city">
         </div>
       </div>
-        <!-- 5 Day Forecast display
+        <!-- 5 Day Forecast display -->
         <div class="mt-4 col-md-12">
-          <h5 id="forecastHeader" class="mt-3 hide">5 Day Forecast:</h5>
-          <div id="forecast" class="row"></div>-->
+          <h5 id="forecastHeader" class="mt-3 hide">
+          <div id="forecast" class="row"></div>
         </div>
       </div>
     </div>
