--- a/index.html
+++ b/index.html
@@ -33,21 +33,25 @@
             <button id="searchBtn" class="btn btn-primary" type="button"><i class="fas fa-search"></i></button>
           </div>
           <!-- Previous city list -->
-          <div class="card city-list">
+          <div class="card city-list" style="cursor: pointer" id="previous-city">
             <ul class="list-group list-group-flush list"></ul>
           </div>
         </div>
-        
-        <div class="col-lg-7 mt-4" id="current-city">
+          <!-- Current city data-->
+        <div class="main">
+          <div class="col-lg-12 mt-4" id="current-city">
+          </div>
+          <!-- 5 Day Forecast display -->
+          <div class="row">
+            <div class="mt-4 col-sm-2"></div>
+              <div class="mt-4 col-sm-10">
+                <h5 id="forecastHeader" class="mt-3 hide">
+                  <div id="forecast" class="row" style="width: 60rem"></div>
+                </div>
+              </div>
+            </div>
+          </div>
         </div>
-      </div>
-        <!-- 5 Day Forecast display -->
-        <div class="mt-4 col-md-12">
-          <h5 id="forecastHeader" class="mt-3 hide">
-          <div id="forecast" class="row"></div>
-        </div>
-      </div>
-    </div>
     
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
